--- a/pages/regionalGeo/matou.html
+++ b/pages/regionalGeo/matou.html
@@ -91,10 +91,10 @@
   <div class="layui-row layui-col-space15">
     <div class="layui-card">
     <div class="layui-card-body">
-       <p align="left">元のビデオを表示するには、<a href="https://www.bilibili.com/video/av8966408/">ここ</a>をクリックしてください。</p>
+       <p align="left">元のビデオを表示するには、<a href="https://youtu.be/7WQUezczZ0U">ここ</a>をクリックしてください。</p>
      </div>
       <video class="center" width="480" height="360" controls="controls">
-      <source src="" type="video/mp4" />
+      <source src="https://youtu.be/7WQUezczZ0U" type="video/mp4" />
       </video>   
       <v><br>© </v>
    </div>
